// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=cyan 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none">
  <div aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(0,212,255,0.25),transparent_55%),radial-gradient(at_75%_70%,rgba(0,184,230,0.18),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=pink 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none">
  <div aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(255,77,141,0.25),transparent_55%),radial-gradient(at_75%_70%,rgba(255,45,124,0.18),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > gradient-mesh snapshot for accent=violet 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none">
  <div aria-hidden="true" class="absolute inset-0 bg-[radial-gradient(at_25%_30%,rgba(167,139,250,0.28),transparent_55%),radial-gradient(at_75%_70%,rgba(139,92,246,0.18),transparent_60%)]" data-testid="spotlight-backdrop-mesh"></div>
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;

exports[`SpotlightBackdrop > poster-blur snapshot with mock URL 1`] = `
"<!--
    Workstream hero-spotlight — v1.1-polish Phase 01 (HSB-V11-CC-01).

    Two-variant decorative backdrop that sits behind a spotlight card's
    foreground content. ALL elements are aria-hidden + pointer-events-none
    so they're invisible to assistive tech and inert to the cursor.

    Variants:
      poster-blur    — Renders a blurred + tinted <img> from \`posterUrl\`.
                       Reuses the card's existing poster URL — browser
                       cache hit. (Threat T-V11-01 in the plan threat
                       register.)
      gradient-mesh  — Renders an \`accent\`-tinted radial-gradient mesh.
                       No HTTP request.

    Both variants are overlaid with a shared right-side vignette so the
    foreground text (which sits on the left/center) stays readable.

    If \`variant === 'poster-blur'\` but \`posterUrl\` is missing/empty, we
    fall back to the gradient-mesh of the same accent so the card never
    renders against a fully transparent background.
  -->
<div class="absolute inset-0 overflow-hidden pointer-events-none"><img src="/api/streaming/image-proxy?url=https%3A%2F%2Fshikimori.one%2Fposter.jpg&amp;w=128" alt="" aria-hidden="true" loading="lazy" decoding="async" class="absolute inset-0 w-full h-full object-cover scale-110" style="filter: blur(40px) saturate(1.2); opacity: 0.4;">
  <!-- Shared right-edge vignette so foreground text remains AA-readable
         regardless of variant. -->
  <div aria-hidden="true" class="absolute inset-0 bg-gradient-to-r from-transparent via-black/30 to-black/60"></div>
</div>"
`;
